<resources>
    <string name="app_name">home</string>

    <!-- Header -->
    <string name="avatar">Avatar</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="tick">Tick</string>

    <!-- User info -->
    <string name="user_name">Jayvie</string>
    <string name="user_id">19–02031–T</string>

    <!-- Section title -->
    <string name="my_courses">My Courses</string>

    <!-- Banners -->
    <string name="banner_tcu">Taguig City University Banner</string>
    <string name="banner_cs">Bachelor of Science in Computer Science Banner</string>

    <!-- Course images -->
    <string name="course_programming">Programming Language Course Image</string>
    <string name="course_sport">PE / Sports Course Image</string>
    <string name="course_os">Operating System Course Image</string>
    <string name="course_hci">Human Computer Interaction Course Image</string>
    <string name="course_culture">Philippine Popular Culture Course Image</string>
    <string name="course_ethics">Ethics and Logic Course Image</string>
    <string name="course_science">Science, Technology, and Society Course Image</string>
    <string name="course_architecture">Architecture and Organization Course Image</string>
    <string name="course_logic">Logic Design Course Image</string>
    <string name="avatar_desc">User profile avatar</string>
    <string name="notification_icon">Notification icon</string>
    <string name="email_icon">Email icon</string>
    <string name="next_page_icon">Next page icon</string>
    <string name="todo">TODO</string>
    <string name="programming_language">Programming Language</string>
    <string name="pl101">PL101</string>
    <string name="activity">Activity</string>
    <string name="assignments">Assignments</string>
    <string name="people">People</string>
    <string name="james_gosling">James Gosling</string>
    <string name="july_13_2021">July 13, 2021</string>
    <string name="java_stack_program">Java Stack Program</string>
    <string name="java_stack_docx_45_5_kb">Java_Stack.docx (45.5 KB)</string>
    <string name="_28">👁️ 28</string>
    <string name="course">Course</string>
    <string name="comment">Comment</string>
    <string name="assignments_amp_activities"><![CDATA[assignments & Activities]]></string>
    <string name="assignments_activities"><![CDATA[Assignments & Activities]]></string>
</resources>
