<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo_new"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/avatar"
        android:clickable="true"
        android:focusable="true"
        app:shapeAppearanceOverlay="@style/CircleImageView" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jayvie Balili"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#333" />

        <TextView
            android:id="@+id/userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BSCS | 2nd Year | J2019"
            android:textColor="#777"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tickIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:src="@drawable/ic_tick"
            android:contentDescription="@string/tick" />

        <ImageView
            android:id="@+id/chatIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:src="@drawable/ic_chat"
            android:contentDescription="@string/chat" />

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            android:src="@drawable/ic_notification"
            android:contentDescription="@string/notification" />
    </LinearLayout>
</LinearLayout>
